<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fillViewport="true"
    android:scaleType="centerCrop">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.andoid.courtcounter.MainActivity">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/lc" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family"
                android:gravity="center_horizontal"
                android:padding="@dimen/score_text_padding"
                android:text="0"
                android:textColor="@color/score_color"
                android:textSize="@dimen/score_text_size" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@string/font_family"
                    android:paddingLeft="@dimen/padding_left_fouls"
                    android:text="@string/fouls_number"
                    android:textSize="@dimen/text_size_fouls" />

                <TextView
                    android:id="@+id/team_a_fouls"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="end"
                    android:paddingRight="@dimen/padding_right_fouls"
                    android:text="0"
                    android:textColor="@color/fouls_text_color"
                    android:textSize="@dimen/text_size_number_of_fouls"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:layout_marginRight="@dimen/margin_24dp"
                android:onClick="addThreeForTeamA"
                android:text="@string/plus_3_points"
                android:textColor="@android:color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:layout_marginRight="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:onClick="addTwoForTeamA"
                android:text="@string/plus_2_points"
                android:textColor="@android:color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:layout_marginRight="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:onClick="addOneForTeamA"
                android:text="@string/free_throw"
                android:textColor="@android:color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:layout_marginRight="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:onClick="addFoulForTeamA"
                android:text="@string/foul"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"></View>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.andoid.courtcounter.MainActivity">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/sw" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family"
                android:gravity="center_horizontal"
                android:padding="@dimen/score_text_padding"
                android:text="0"
                android:textColor="@color/score_color"
                android:textSize="@dimen/score_text_size" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@string/font_family"
                    android:paddingLeft="@dimen/padding_left_fouls"
                    android:text="@string/fouls_number"
                    android:textSize="@dimen/text_size_fouls" />

                <TextView
                    android:id="@+id/team_b_fouls"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="end"
                    android:paddingRight="@dimen/padding_right_fouls"
                    android:text="0"
                    android:textColor="@color/fouls_text_color"
                    android:textSize="@dimen/text_size_number_of_fouls"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:layout_marginRight="@dimen/margin_24dp"
                android:onClick="addThreeForTeamB"
                android:text="@string/plus_3_points"
                android:textColor="@android:color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:layout_marginRight="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:onClick="addTwoForTeamB"
                android:text="@string/plus_2_points"
                android:textColor="@android:color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:layout_marginRight="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:onClick="addOneForTeamB"
                android:text="@string/free_throw"
                android:textColor="@android:color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:layout_marginRight="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:onClick="addFoulForTeamB"
                android:text="@string/foul"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:onClick="resetButton"
        android:text="@string/reset"
        android:textColor="@android:color/white" />

</RelativeLayout>